--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,5 @@
 $primary-color: #52555f;
+$secondory-color: #52555fb2;
 $mainAccent-color: #ff751d;
 $secondaryAccent-color: #ffdac0;
 $mainLight-color: #fff;
