--- a/src/components/BalanceTable/BalanceTable.module.scss
+++ b/src/components/BalanceTable/BalanceTable.module.scss
@@ -1,3 +1,4 @@
+@import 'styles/shared.scss';
 //ReportTable
 .report__thumb {
   margin-bottom: auto;
@@ -27,15 +28,56 @@
   color: inherit;
 }
 
+.thumb {
+  padding: 30px 20px 60px 20px;
+  background: $mainLight-color;
+
+  box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
+  border-radius: 0px 30px 30px 30px;
+}
+
 // BalanceLine
-.balanceline__Thumb {
+
+.balance__title {
+  color: $secondory-color;
+  font-weight: 500;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+
+  margin-right: 40px;
+}
+
+.balance__input {
+  width: 125px;
+  height: 44px;
+  background-color: transparent;
+  border: 2px solid $mainLight-color;
+  border-radius: 16px;
+
+  font-weight: 700;
+  color: $mainDark-color;
+  text-align: center;
+
+  margin-right: 15px;
+
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin-bottom: 20px;
+  justify-content: center;
+
+  &::placeholder {
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    font-weight: 700;
+    color: $mainDark-color;
+    text-align: center;
+    width: 100%;
+  }
 }
 
 .reports__link {
+  color: $secondory-color;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
   text-decoration: none;
   color: inherit;
 
@@ -43,12 +85,14 @@
   align-items: center;
   justify-content: center;
 
+  margin-left: 205px;
+
   &::after {
     content: '';
     background: url('../../images/trend.png');
     width: 24px;
     height: 24px;
-    margin-left: 30px;
+    margin-left: 15px;
   }
 }
 
