--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -29,6 +29,7 @@
       background-color: $auxiliaryLight-color;
       border: 2px solid $mainLight-color;
       color: $secondory-color;
+      cursor: not-allowed;
     }
   }
 }
