--- a/src/pages/BalancePage/BalancePage.module.scss
+++ b/src/pages/BalancePage/BalancePage.module.scss
@@ -5,6 +5,6 @@
   margin-left: auto;
   margin-right: auto;
   padding: 40px 0 80px 0;
-  background-image: url('../../images/background.png');
-  background-repeat: no-repeat;
+  // background-image: url('../../images/background.png');
+  // background-repeat: no-repeat;
 }
