--- a/src/components/BalanceTable/BalanceTable.module.scss
+++ b/src/components/BalanceTable/BalanceTable.module.scss
@@ -113,10 +113,14 @@
   margin-bottom: 20px;
 }
 
-.balancetable__thumb {
-  height: 400px;
-  width: 70%;
-}
+// .balancetable__thumb {
+//   height: 400px;
+//   min-width: 760px;
+
+//   border-radius: 20px 20px 0px 0px;
+
+//   background-color: red;
+// }
 
 .button__delete {
   width: 100%;
