login and register(logical part) some css

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -9,7 +9,7 @@
 
   font-weight: 700;
   font-size: 12px;
-  line-height: 1, 167;
+  line-height: 1.167;
   color: $primary-color;
 
   transition: all $timing-function;
