adds styles  for mobile width

--- a/src/APP/App.module.scss
+++ b/src/APP/App.module.scss
@@ -28,7 +28,7 @@
 
 .backgroundWrapperAuth {
   max-width: $mobile;
-  padding-top: 84px;
+  // padding-top: 84px;
   margin-left: auto;
   margin-right: auto;
   background-image: url(../images/bag-money-115.png), url(../images/bag-money-75.png),
