--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,19 +1,21 @@
 @import 'styles/shared.scss';
 
 .container {
-  max-width: 100%;
+  width: 100%;
+  max-width: $mobile;
   margin-left: auto;
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
 
   @media screen and (min-width: $tablet) {
-    width: 100%;
+    max-width: $tablet;
     padding-left: 50px;
     padding-right: 50px;
   }
 
   @media screen and (min-width: $desktop) {
+    max-width: $desktop;
     padding-left: 110px;
     padding-right: 110px;
   }
