--- a/src/components/Statistic/GraphDetails/Categories/Categories.module.scss
+++ b/src/components/Statistic/GraphDetails/Categories/Categories.module.scss
@@ -52,7 +52,7 @@
 .categories__currentValue {
   margin-left: 15px;
   margin-right: 15px;
-  font-family: Roboto;
+  font-family: $primary-font-stack;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
@@ -62,7 +62,7 @@
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: uppercase;
-  color: #000000;
+  color: $mainDark-color;
 }
 
 .categorie__name {
@@ -117,27 +117,27 @@
   margin-bottom: 5px;
   background-image: radial-gradient(
     75% 60% at 50% 50%,
-    #f5f6fb 15%,
-    #f5f6fb 15%,
-    #f5f6fb 40%,
-    #f5f6fb 40%,
-    #f5f6fb 65%,
-    #fff 65%
+    $auxiliaryLight-color 15%,
+    $auxiliaryLight-color 15%,
+    $auxiliaryLight-color 40%,
+    $auxiliaryLight-color 40%,
+    $auxiliaryLight-color 65%,
+    $mainLight-color 65%
   );
 }
 
 .icon:hover,
 .icon:focus,
 .iconActive {
-  fill: #ff751d;
+  fill: $mainAccent-color;
   background-image: radial-gradient(
     75% 60% at 50% 50%,
-    #ffdac0 15%,
-    #ffdac0 15%,
-    #ffdac0 40%,
-    #ffdac0 40%,
-    #ffdac0 65%,
-    #fff 65%
+    $secondaryAccent-color 15%,
+    $secondaryAccent-color 15%,
+    $secondaryAccent-color 40%,
+    $secondaryAccent-color 40%,
+    $secondaryAccent-color 65%,
+    $mainLight-color 65%
   );
 
   transform: rotate(20deg);
