--- a/src/components/Statistic/StatHeader/Period/Period.module.scss
+++ b/src/components/Statistic/StatHeader/Period/Period.module.scss
@@ -21,7 +21,7 @@
 }
 
 .period__title {
-  font-family: Roboto;
+  font-family: $primary-font-stack;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
@@ -53,7 +53,7 @@
 .period__currentDate {
   margin-left: 15px;
   margin-right: 15px;
-  font-family: Roboto;
+  font-family: $primary-font-stack;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
@@ -63,5 +63,5 @@
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: uppercase;
-  color: #000000;
+  color: $mainDark-color;
 }
