--- a/src/components/Statistic/GraphDetails/GraphDetails.module.scss
+++ b/src/components/Statistic/GraphDetails/GraphDetails.module.scss
@@ -23,6 +23,17 @@
   }
 }
 
+.diagramLarge {
+  min-height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: $mainLight-color;
+  box-shadow: 0px 10px 60px rgba(170, 178, 197, 0.2);
+  border-radius: 30px;
+  margin: 0 auto;
+  width: 100%;
+}
 .diagram_emptyTitle {
   text-align: center;
 }
