--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -3,6 +3,8 @@
 .header {
   min-height: 56px;
   background-color: $mainLight-color;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 
 .header__wrapper {
