--- a/src/pages/BalancePage/BalancePage.module.scss
+++ b/src/pages/BalancePage/BalancePage.module.scss
@@ -1,10 +1,18 @@
 @import 'styles/shared.scss';
 
 .balanceSection {
-  max-width: $desktop;
+  max-width: $mobile;
   margin-left: auto;
   margin-right: auto;
-  padding: 40px 0 80px 0;
-  // background-image: url('../../images/background.png');
-  // background-repeat: no-repeat;
+  padding-top: 30px;
+
+  @media screen and (min-width: $tablet) {
+    max-width: $tablet;
+    padding: 40px 0 60px 0;
+  }
+
+  @media screen and (min-width: $desktop) {
+    max-width: $desktop;
+    padding: 40px 0 80px 0;
+  }
 }
