--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -3,6 +3,8 @@
 .user__name {
   line-height: 14px;
   letter-spacing: 0.04em;
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
 .user__button__logout {
@@ -23,5 +25,19 @@
     width: 1px;
     height: 36px;
     background-color: #e0e5eb;
+  }
+}
+
+.buttonProfile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 5px;
+  width: 84px;
+  background-color: transparent;
+  border: none;
+  @media screen and (min-width: $tablet) {
+    width: auto;
+    min-width: 160px;
   }
 }
