make mobile balance line

--- a/src/pages/BalancePage/BalancePage.module.scss
+++ b/src/pages/BalancePage/BalancePage.module.scss
@@ -4,7 +4,7 @@
   max-width: $mobile;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 30px;
+  padding: 95px 0 280px 0;
 
   @media screen and (min-width: $tablet) {
     max-width: $tablet;
