--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -51,3 +51,7 @@
   background-color: $auxiliaryLight-color;
   box-shadow: 1px 3px 5px rgba(82, 85, 95, 0.15);
 }
+
+.mobile {
+  border-radius: 0 16px 16px 0;
+}
