--- a/src/components/RegistrationForm/registrationForm.module.scss
+++ b/src/components/RegistrationForm/registrationForm.module.scss
@@ -1,4 +1,5 @@
 @import 'styles/shared.scss';
+@import 'styles/colors.scss';
 
 div.box {
   display: flex;
@@ -6,10 +7,9 @@ div.box {
   width: 300px;
   height: auto;
   padding: 45px 18px 53px;
-  // background-color: rgb(240, 240, 240);
+  background-color: $mainLight-color;
   border-radius: 30px;
-  border: 1px solid;
-  border-color: black;
+
   @media screen and (min-width: $tablet) {
     width: 436px;
     height: auto;
@@ -30,10 +30,6 @@ div.box {
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
-}
-
-input .registration__input {
-  background-color: aqua;
 }
 
 .button__wrapper {
