--- a/src/components/RegistrationForm/registrationForm.module.scss
+++ b/src/components/RegistrationForm/registrationForm.module.scss
@@ -9,6 +9,7 @@ div.box {
   padding: 45px 18px 53px;
   background-color: $mainLight-color;
   border-radius: 30px;
+  box-shadow: 5px 10px 20px rgba(170, 178, 197, 0.4);
 
   @media screen and (min-width: $tablet) {
     width: 436px;
