--- a/src/pages/BalancePage/BalancePage.module.scss
+++ b/src/pages/BalancePage/BalancePage.module.scss
@@ -4,7 +4,10 @@
   max-width: $mobile;
   margin-left: auto;
   margin-right: auto;
-  padding: 95px 0 280px 0;
+  // padding: 95px 0 0 0;
+
+  // height: 610px;
+  // min-height: 100%;
 
   @media screen and (min-width: $tablet) {
     max-width: $tablet;
