--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -10,12 +10,14 @@
 .user__button__logout {
   display: block;
   background-color: transparent;
-  padding: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
   border: none;
-  color: inherit;
-  line-height: 14px;
+  color: #52555f;
+  line-height: 1.167;
   letter-spacing: 0.04em;
   text-decoration: underline;
+  font-size: 12px;
 }
 
 .user__line {
@@ -34,6 +36,8 @@
   align-items: center;
   padding-left: 5px;
   width: 84px;
+  color: #52555f;
+  text-decoration: none;
   background-color: transparent;
   border: none;
   @media screen and (min-width: $tablet) {
