--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -51,3 +51,17 @@
   background-color: $auxiliaryLight-color;
   box-shadow: 1px 3px 5px rgba(82, 85, 95, 0.15);
 }
+
+.google__button {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: 0.02em;
+  color: #000000;
+  border-radius: 26px;
+  background: #f6f7fb;
+  padding: 10px 20px;
+}
