--- a/src/components/LoginForm/loginForm.module.scss
+++ b/src/components/LoginForm/loginForm.module.scss
@@ -9,6 +9,7 @@ div.box {
   padding: 45px 18px 53px;
   background-color: $mainLight-color;
   border-radius: 30px;
+  box-shadow: 5px 10px 20px rgba(170, 178, 197, 0.4);
 
   @media screen and (min-width: $tablet) {
     width: 436px;
@@ -38,4 +39,7 @@ div.box {
 
 .login__button {
   margin-right: 15px;
+}
+.google__icon {
+  margin-right: 10px;
 }
