--- a/src/components/RegistrationForm/registrationForm.module.scss
+++ b/src/components/RegistrationForm/registrationForm.module.scss
@@ -2,14 +2,13 @@
 @import 'styles/colors.scss';
 
 div.box {
-  display: flex;
-  justify-content: center;
   width: 300px;
   height: auto;
   padding: 45px 18px 53px;
   background-color: $mainLight-color;
   border-radius: 30px;
   box-shadow: 5px 10px 20px rgba(170, 178, 197, 0.4);
+  margin-left: -10px;
 
   @media screen and (min-width: $tablet) {
     width: 436px;
@@ -17,6 +16,7 @@ div.box {
     padding: 50px 85px;
     // background-color: rgb(240, 240, 240);
     border-radius: 30px;
+    margin-right: 0px;
   }
 }
 
@@ -39,4 +39,8 @@ div.box {
 
 .login__button {
   margin-right: 15px;
+}
+
+.google__icon {
+  margin-right: 10px;
 }
