adds update phone number

--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -3,8 +3,8 @@
 .header {
   min-height: 56px;
   background-color: $mainLight-color;
-  // padding-top: 12px;
-  // padding-bottom: 12px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 
 .header__wrapper {
@@ -13,11 +13,12 @@
   justify-content: space-between;
 
   @media screen and (min-width: $tablet) {
-    padding: 0 25px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
 
   @media screen and (min-width: $desktop) {
-    padding: 0 45px 0 25px;
+    padding-right: 45px;
   }
 }
 
