--- a/src/components/Calculator/Calculator.module.scss
+++ b/src/components/Calculator/Calculator.module.scss
@@ -1,22 +1,25 @@
 @import 'styles/shared.scss';
 
 .calculator {
+  height: 250px;
+  width: 200px;
+  position: absolute;
+  z-index: 100;
+  top: 270px;
+  left: 57px;
+
   @media screen and (min-width: $tablet) {
-    height: 250px;
-    width: 200px;
-    position: absolute;
-    z-index: 100;
-    top: 315px;
-    right: 0;
+    top: 395px;
+    left: 500px;
   }
 
   @media screen and (min-width: $desktop) {
-    top: 272px;
-    right: 340px;
+    top: 350px;
+    left: 710px;
   }
 
   @media screen and (min-width: 1440px) {
-    top: 272px;
-    right: 660px;
+    top: 360px;
+    left: 1020px;
   }
 }
