--- a/src/pages/BalancePage/BalancePage.module.scss
+++ b/src/pages/BalancePage/BalancePage.module.scss
@@ -1,13 +1,10 @@
 @import 'styles/shared.scss';
 
 .balanceSection {
+  // position: relative;
   max-width: $mobile;
   margin-left: auto;
   margin-right: auto;
-  // padding: 95px 0 0 0;
-
-  // height: 610px;
-  // min-height: 100%;
 
   @media screen and (min-width: $tablet) {
     max-width: $tablet;
