--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -51,6 +51,7 @@
   background-color: $auxiliaryLight-color;
   box-shadow: 1px 3px 5px rgba(82, 85, 95, 0.15);
   z-index: 1;
+  color: $mainAccent-color;
 }
 
 .smallRight {
