--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -195,8 +195,15 @@ button.profile__buttonShare {
 
 .tableData {
   @media screen and (min-width: $tablet) {
+    margin-right: auto;
+    margin-left: auto;
     display: flex;
     flex-direction: column;
+    width: 250px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 380px;
   }
 }
 
