--- a/src/APP/App.module.scss
+++ b/src/APP/App.module.scss
@@ -19,7 +19,7 @@
   @media screen and (min-width: $desktop) {
     // min-height: 920px; ////////////временно
     max-width: $desktop;
-    background-image: url(../images/bgc-grey-d.png), url(../images/bag-moneys-auth-3rows-d.png);
+    background-image: url(../images/bgc-grey-d.png), url(../images/bag-moneys-auth-3rows-d.svg);
 
     background-size: $desktop, $desktop;
     background-position: top -56px left 0, left 2px bottom 0;
