--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -200,6 +200,7 @@ button.profile__buttonShare {
     display: flex;
     flex-direction: column;
     width: 250px;
+    color: #aabafa;
   }
 
   @media screen and (min-width: $desktop) {
