--- a/src/APP/App.module.scss
+++ b/src/APP/App.module.scss
@@ -22,7 +22,7 @@
     background-image: url(../images/bgc-grey-d.png), url(../images/bag-moneys-auth-3rows-d.svg);
 
     background-size: $desktop, $desktop;
-    background-position: top -56px left 0, left 2px bottom 0;
+    background-position: top -56px left 0, left 2px bottom -7px;
   }
 }
 
