--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -93,7 +93,7 @@ button.profile__buttonShare {
   }
 }
 
-.profile__buttonEdit {
+button.profile__buttonEdit {
   position: absolute;
   top: 4px;
   right: 10px;
