--- a/src/APP/App.module.scss
+++ b/src/APP/App.module.scss
@@ -55,3 +55,8 @@
     background-position: top 20px left 10px, top 0 left 0, left 100px bottom 56px;
   }
 }
+
+.loader {
+  display: flex;
+  justify-content: center;
+}
