--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -92,3 +92,41 @@
   margin-left: 5px;
   margin-right: 5px;
 }
+
+.heart {
+  animation: heart 5s ease infinite;
+}
+
+@keyframes heart {
+  0% {
+    transform: scale(1);
+  }
+
+  5% {
+    transform: scale(1.75);
+  }
+
+  20% {
+    transform: scale(1);
+  }
+
+  30% {
+    transform: scale(1);
+  }
+
+  35% {
+    transform: scale(1.75);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  55% {
+    transform: scale(1.75);
+  }
+
+  70% {
+    transform: scale(1);
+  }
+}
