--- a/src/components/Statistic/StatHeader/StatHeader.module.scss
+++ b/src/components/Statistic/StatHeader/StatHeader.module.scss
@@ -7,8 +7,8 @@
   margin-left: -20px;
   margin-right: -20px;
   border-bottom-left-radius: 120px;
-  background: $auxiliaryLight-color;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  // background: $auxiliaryLight-color;
+  // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   @media screen and (min-width: $tablet) {
     height: 526px;
