--- a/src/pages/DevelopersPage/DevelopersPage.module.scss
+++ b/src/pages/DevelopersPage/DevelopersPage.module.scss
@@ -20,6 +20,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
+  @media screen and (min-width: $tablet) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
 }
 
 .developers__item {
