fix and clean code

--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -40,3 +40,11 @@
   display: flex;
   justify-content: center;
 }
+.localization_icon {
+  outline: none;
+  border: none;
+  background: transparent;
+  padding: 5px;
+  cursor: pointer;
+  margin-right: 5px;
+}
